--- a/css/ting_inspiration_list.css
+++ b/css/ting_inspiration_list.css
@@ -13,18 +13,18 @@
 }
 
 .ting-inspiration-list .search-results li {
-  margin-bottom: 1.5em;
-  margin-right: 10px;
+  margin-bottom: 1000px;
+  margin-right: 30px;
 }
 
 .ting-inspiration-list .search-results ul {
-  margin-left: 20px;
+  margin-left: 0px;
 }
 
 .ting-inspiration-list .ting-cover {
     background-image: url(/profiles/ding2/modules/ting_inspiration_list/images/defaultcover.jpg); 
-    width: 140px;
-    height: 203px;
+    width: 190px;
+    height: 250px;
 }
 
 .ting-inspiration-list .ting-cover img {
@@ -40,3 +40,10 @@
 .ting-inspiration-list .ting-cover:before {
     content: "";
 }
+
+.ting-inspiration-item-title {
+    width: 190px;
+    position: absolute;
+}
+
+
